--- a/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/Areas/Admin/Views/Blogs/Index.cshtml
@@ -110,8 +110,9 @@
                                         @Html.DisplayFor(modelItem => item.Name)
                                     </div>
                                 </td>
-                                @{
-                                }
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.User.FullName)
+                                </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.CreatedAt)
                                 </td>
