--- a/wwwroot/css/profile.css
+++ b/wwwroot/css/profile.css
@@ -78,6 +78,48 @@
     border-radius: 50%;
 }
 
+.pic-avatar {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.pic-avatar {
+    transition: filter 0.4s;
+}
+
+.pic-avatar:hover {
+    filter: brightness(80%);
+}
+
+.edit-icon:hover {
+    filter: brightness(80%);
+}
+
+.edit-icon {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 18px;
+}
+
+.image-container:hover .edit-icon {
+    display: block;
+}
+
+.image-container:hover .pic-avatar {
+    filter: brightness(80%); /* Giảm độ sáng khi hover trên .image-container */
+}
+
+.image-container:hover .edit-icon {
+    display: block; /* Hiện icon khi hover */
+    filter: brightness(80%); /* Giảm độ sáng khi hover trên icon chỉnh sửa */
+}
+
 
 @media (min-width: 768px) {
     #menu-toggle {
