--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -51,31 +51,30 @@
 
 <form asp-action="Create" id="blog-form" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="col-8" style="background-color:white;display:flex; justify-content:center;align-items:center; margin:10px 200px">
-
-        <div class="col-10">
-            <div class="block-header block-header-default">
-                <h3 class="block-header-default" style="margin:10px">Add Post</h3>
-            </div>
-            <div class="col-8 form-group">
+    <div class="col-8" style="background-color:white;display:block; margin:10px 250px">
+        <div class="block-header block-header-default" style="width:100%">
+            <h3 class="block-header-default" style="margin:10px">Add Post</h3>
+        </div>
+        <div class="col-8" style="width:100%;padding:10px 100px">
+            <div class="col-10 form-group" >
                 <label class="form-label" asp-for="Image">Image</label>
                 <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
-                <img id="imagePreview" style="display:none; max-width: 400px; max-height: 300px; " />
+                <img id="imagePreview" style="display:none; width: 400px; height: 350px; margin:10px 60px " />
             </div>
 
-            <div class="col-8 form-group">
+            <div class="col-10 form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" id="blog-name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
-            <div class="col-8  form-group">
+            <div class="col-10  form-group">
                 <label asp-for="Slug" class="control-label"></label>
                 <input asp-for="Slug" class="form-control" id="blog-slug" />
                 <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
 
-            <div class="col-8 form-group">
+            <div class="col-10 form-group">
                 <label class="form-label" asp-for="TopicId">Topic</label>
                 <select class="js-select2 form-select" id="topic-id" asp-for="TopicId" style="width: 100%;" data-placeholder="Choose topic..">
                     <option></option>
@@ -87,11 +86,11 @@
                 </select>
             </div>
 
-            <div class="form group">
+            <div class="col-10 form group">
                 <label class="form-label">Content</label>
                 <textarea id="js-ckeditor"></textarea>
             </div>
-            <div class="mb-4 form-group" style="display:flex; justify-content:end;">
+            <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 100px">
                 <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
                 <button type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" style="margin:10px">Create Post</button>
             </div>
