--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -86,6 +86,10 @@
                                                     <label class="form-label" for="EmailAddress">Email Address</label>
                                                     <input class="form-control mb-1" placeholder="abc@email.com" type="text" data-val="true" data-val-required="Email address is required" id="EmailAddress" name="EmailAddress" value="">
                                                 </div>
+                                                <div class="form-group">
+                                                    <label class="form-label" for="EmailAddress">Email Address</label>
+                                                    <input class="form-control mb-1" placeholder="abc@email.com" type="text" data-val="true" data-val-required="Email address is required" id="EmailAddress" name="EmailAddress" value="">
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
