--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -138,20 +138,18 @@
 	                    <div id="collapse-B" class="collapse" role="tabpanel" aria-labelledby="heading-B">
 	                        <div class="card-body">
 								<div class="container">
-								<div class="row">
-									<div class="col-lg-4 mb-4">
-										<div class="p-4 border border-2" style="border-radius: 8px">
-											<div class="row justify-content-center align-items-center">
-												<div class="d-flex justify-content-center align-items-center">
-													<div style="font-size: 30px;">
-														<strong style="color: #faca50;">@ViewBag.AverageRating</strong>/<span>5</span>
-													</div>
+								<div class="row mb-4">
+									<div class="col-lg-4">
+										<div class="p-4 border rounded bg-white">
+											<div class="text-center">
+												<div class="fs-3">
+													<strong class="text-warning">@ViewBag.AverageRating</strong>/<span>5</span>
 												</div>
 												<h6 class="text-center">Có @ViewBag.CountView lượt đánh giá</h6>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<span class="rating" style="margin-right: 20px">
-													<i class="icon-star" style="color: #fec348;"></i>
+												<span class="rating me-3">
+													<i class="icon-star text-warning"></i>
 													<i class="icon-star"></i>
 													<i class="icon-star"></i>
 													<i class="icon-star"></i>
@@ -164,9 +162,9 @@
 												</div>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<span class="rating" style="margin-right: 20px">
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
+												<span class="rating me-3">
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
 													<i class="icon-star"></i>
 													<i class="icon-star"></i>
 													<i class="icon-star"></i>
@@ -178,10 +176,10 @@
 												</div>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<span class="rating" style="margin-right: 20px">
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
+												<span class="rating me-3">
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
 													<i class="icon-star"></i>
 													<i class="icon-star"></i>
 												</span>
@@ -192,11 +190,11 @@
 												</div>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<span class="rating" style="margin-right: 20px">
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
+												<span class="rating me-3">
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
 													<i class="icon-star"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-2">
@@ -206,12 +204,12 @@
 												</div>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<span class="rating" style="margin-right: 20px">
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
-													<i class="icon-star" style="color: #fec348;"></i>
+												<span class="rating me-3">
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
+													<i class="icon-star text-warning"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-2">
 													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentFiveStar)" aria-valuenow="@reviewStats.FiveStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
@@ -231,18 +229,18 @@
 										</div>
 									</div>
 									<div class="col-lg-8">
-										<div class="border border-1" style="border-radius: 8px">
-											<div class="p-3 d-flex bg-primary mb-1 justify-content-between" style="font-size: 16px;border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0;">
+										<div class="border border-1 rounded">
+											<div class="p-3 d-flex bg-primary mb-1 justify-content-between rounded-top fs-6">
 												<div class="col-lg-6 text-white">
 													Đánh giá sản phẩm
 												</div>
 												<div class="d-flex col-md-6 justify-content-between">
 													<div class="text-white ml-4">
-														<i class="fa-solid fa-sort text-white" style="margin-right: 5px"></i>
+														<i class="fa-solid fa-sort text-white me-2"></i>
 														Sắp xếp: Mới nhất
 													</div>
 													<div class="text-white">
-														<i class="fa-solid fa-filter text-white mr-3" style="margin-right: 5px"></i>
+														<i class="fa-solid fa-filter text-white me-2"></i>
 														Lọc: Tất cả
 													</div>
 												</div>
@@ -283,21 +281,13 @@
 										</div>
 									</div>
 								</div>
-	                            <!-- /row -->
-								
 	                        </div>
-							
-	                        <!-- /card-body -->
 	                    </div>
 	                </div>
-	                <!-- /tab B -->
 	            </div>
-	            <!-- /tab-content -->
 	        </div>
-	        <!-- /container -->
 	    </div>
 		</div>
-	    <!-- /tab_content_wrapper -->
 
 	    <div class="container margin_60_35">
 	        <div class="main_title">
