--- a/Views/Payment/PaymentSuccess.cshtml
+++ b/Views/Payment/PaymentSuccess.cshtml
@@ -101,7 +101,7 @@
                                         <div class="d-flex gap-3 align-items-center">
                                             <img src="/img/products/@item.Thumbnail" alt="product" style="height: 70px">
                                             <div>
-                                                <a class="fs-sm fw-semibold" href="/product/detail/@item.ProductId">@item.Quantity x @item.Name</a>
+                                                <a class="fs-sm fw-semibold" href="/products/@item.ProductSlug">@item.Quantity x @item.Name</a>
                                                 <div class="fs-sm text-muted">Size: @item.Size, Color: @item.Color</div>
                                             </div>
                                         </div>
