--- a/Views/Blog/Detail.cshtml
+++ b/Views/Blog/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
 	var blog = ViewBag.Blog;
 	ViewData["Title"] = blog.Name;
-	var time = new DateOnly
+	var time = new DateOnly();
 }
 @section Styles {
 	<link href="~/css/blog.css" rel="stylesheet">
