--- a/Views/Shared/Components/ShoeCards/Default.cshtml
+++ b/Views/Shared/Components/ShoeCards/Default.cshtml
@@ -17,11 +17,11 @@
 		}
 	}
 	<figure>
-		<a asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">
+		<a asp-controller="Product" asp-action="Detail" asp-route-slug="@Model.Slug">
 			<img class="img-fluid" src="~/img/products/@Model.Thumbnail.Name" alt="">
 		</a>
 	</figure>
-	<a asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">
+	<a asp-controller="Product" asp-action="Detail" asp-route-slug="@Model.Slug">
 		<h3>@Model.Name</h3>
 	</a>
 	<div class="price_box">
