--- a/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Areas/Admin/Views/Products/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Add Product";
+    ViewData["Title"] = "Edit Product";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 
     var product = ViewBag.Product;
@@ -11,6 +11,7 @@
 
 @section Scripts {
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/admin/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
@@ -27,7 +28,7 @@
                 <!-- Info -->
                 <div class="block block-rounded">
                     <div class="block-header block-header-default">
-                        <h3 class="block-title">Add product</h3>
+                        <h3 class="block-title">Edit product</h3>
                     </div>
                     <div class="block-content">
                         <input id="product-id" name="product-id" value="@product.Id" hidden/>
@@ -36,9 +37,13 @@
                             <input value="@product.Name" type="text" class="form-control" id="product-name" name="product-name">
                         </div>
                         <div class="row mb-4">
-                            <div class="col-md-12">
-                                <label class="form-label" for="product-price">Price in USD ($)</label>
-                                <input value="@product.Price" type="text" class="form-control" id="product-price" name="product-price">
+                            <div class="col-md-6">
+                                <label class="form-label" for="product-price">Price ($)</label>
+                                <input value="@product.Price" type="number" class="form-control" id="product-price" name="product-price">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="product-price-sale">Price sale ($)</label>
+                                <input value="@product.PriceSale" type="number" class="form-control" id="product-price-sale" name="product-price-sale">
                             </div>
                         </div>
                         <div class="mb-4">
@@ -99,15 +104,32 @@
                 <div class="block block-rounded">
                     <div class="block-content">
                         <div class="d-flex justify-content-between align-items-center mb-4">
-                            <label class="form-label">Active</label>
+                            <label class="form-label">Is featured?</label>
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status" checked="@product.Status">
-                                <label class="form-check-label" for="product-status"></label>
+                                <input checked="@product.IsFeatured" class="form-check-input" type="checkbox" value="" id="is-featured" name="is-featured">
+                                <label class="form-check-label" for="is-featured"></label>
                             </div>
                         </div>
                         <div class="mb-4">
                             <label class="form-label" for="product-slug">Slug</label>
                             <input value="@product.Slug" type="text" class="form-control" id="product-slug" name="product-slug">
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="product-status">Status</label>
+                            <select class="js-select2 form-select" id="product-status" name="product-status" style="width: 100%;" data-placeholder="Choose status..">
+                                <option></option>
+                                <option value="1" selected="@(product.Status == true)">Published</option>
+                                <option value="0" selected="@(product.Status == false)">Draft</option>
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="product-label">Label</label>
+                            <select class="js-select2 form-select" id="product-label" name="product-label" style="width: 100%;" data-placeholder="Choose label..">
+                                <option></option>
+                                <option value="0" selected="@(product.Label == 0)">No label</option>
+                                <option value="1" selected="@(product.Label == 1)">New</option>
+                                <option value="2" selected="@(product.Label == 2)">Hot</option>
+                            </select>
                         </div>
                         <div class="mb-4">
                             <label class="form-label" for="brand-id">Brand</label>
@@ -154,6 +176,7 @@
             <div class="modal-body block block-rounded block-transparent mb-0">
                 <div class="block-content">
                     <form id="form-variant" onsubmit="return false;">
+                        <input id="variant-id" type="hidden" value="" />
                         <div class="mb-4">
                             <label class="form-label" for="color-id">Color</label>
                             <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-container="#modal-variant" data-placeholder="Choose one..">
@@ -192,7 +215,7 @@
             <div class="model-footer block-content block-content-full text-end bg-body">
                 <button type="button" class="btn btn-sm btn-alt-secondary me-1" data-bs-dismiss="modal">Close</button>
                 <button type="button" id="btn-add-variant" class="btn btn-sm btn-primary">Save</button>
-                <button type="button" id="btn-update-variant" class="btn btn-sm btn-primary" data-bs-dismiss="modal" data-index="0" style="display: none">Update</button>
+                <button type="button" id="btn-update-variant" class="btn btn-sm btn-primary" data-index="0" style="display: none">Update</button>
             </div>
         </div>
     </div>
