--- a/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Areas/Admin/Views/Products/Edit.cshtml
@@ -176,7 +176,7 @@
             <div class="modal-body block block-rounded block-transparent mb-0">
                 <div class="block-content">
                     <form id="form-variant" onsubmit="return false;">
-                        <input id="variant-id" type="hidden" value="" />
+                        <input id="variant-id" type="hidden" value="-1" />
                         <div class="mb-4">
                             <label class="form-label" for="color-id">Color</label>
                             <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-container="#modal-variant" data-placeholder="Choose one..">
