--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -302,6 +302,7 @@
 											<img class="img-fluid lazy loaded" src="img/products/${product.Thumbnail.Name}" alt="${product.name}" data-was-processed="true">
 											</a>
 										</figure>
+										<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i></div>
 											<a href="/products/${product.Slug}">
 											<h3>${product.Name}</h3>
 										</a>
