--- a/Views/Shared/Components/ShoeCards/Default.cshtml
+++ b/Views/Shared/Components/ShoeCards/Default.cshtml
@@ -21,6 +21,7 @@
 			<img class="img-fluid" src="~/img/products/@Model.Thumbnail.Name" alt="">
 		</a>
 	</figure>
+	<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i></div>
 	<a asp-controller="Product" asp-action="Detail" asp-route-slug="@Model.Slug">
 		<h3>@Model.Name</h3>
 	</a>
