--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -67,12 +67,12 @@
                                     <input type="text" class="form-control form-control-alt" id="checkout-email" name="checkout-email">
                                 </div>
                                 <div class="col-6">
-                                    <label class="form-label" for="checkout-phone">Email</label>
+                                    <label class="form-label" for="checkout-phone">Phone</label>
                                     <input type="text" class="form-control form-control-alt" id="checkout-phone" name="checkout-phone">
                                 </div>
                             </div>
                             <div class="mb-4">
-                                <label class="form-label" for="checkout-address">Email</label>
+                                <label class="form-label" for="checkout-address">Address</label>
                                 <input type="text" class="form-control form-control-alt" id="checkout-address" name="checkout-address">
                             </div>
                         </form>
